--- a/react-project/src/assets/css/leaflet.css
+++ b/react-project/src/assets/css/leaflet.css
@@ -1,4 +1,11 @@
 .leaflet-container{
-    height: 500px;
+    height: 100vh;
     width: 100%;
+    z-index: 20;
+}
+
+@media only screen and (max-width: 600px) {
+    .leaflet-right{
+        display: none;
+    }
 }
