--- a/react-project/src/assets/css/leaflet.css
+++ b/react-project/src/assets/css/leaflet.css
@@ -1,7 +1,8 @@
 .leaflet-container{
     height: 100vh;
-    width: 100%;
+    width: 90%;
     z-index: 20;
+    margin: 3rem;
 }
 
 @media only screen and (max-width: 768px) {
