User and Guide table

--- a/react-project/src/assets/css/main.css
+++ b/react-project/src/assets/css/main.css
@@ -26,3 +26,7 @@ background-color: #FF9248 !important;
     color: #fa6704 !important;
     font-weight: 500 !important;
 }
+
+.ant-btn-primary{
+    background-color: #FF9248 !important;
+}
