Guide Profile rendered for admin

--- a/react-project/src/assets/css/main.css
+++ b/react-project/src/assets/css/main.css
@@ -30,3 +30,7 @@ background-color: #FF9248 !important;
 .ant-btn-primary{
     background-color: #FF9248 !important;
 }
+
+.underline{
+    text-decoration: underline;
+}
